--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "parcel-bundler": "^1.12.3"
+  },
   "devDependencies": {
-    "parcel-bundler": "^1.12.3",
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "babel-jest": "^24.8.0",
